Use `TRINO_PARQUET` utility for creating the page source